updates after finishing reload problem with pages

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!-- eslint-disable @angular-eslint/template/eqeqeq -->
 <app-nav-bar></app-nav-bar>
 <div class="container" style="margin-top: 70px;">
+    <h3>Session Time: {{display}}</h3>
     <router-outlet></router-outlet>
 </div>
