--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -49,7 +49,7 @@
           <div *ngIf="loggedin()" class="dropdown" dropdown>
 
             <a  class="dropdown-toggle text-light" dropdownToggle (click)="false">
-                Welcome {{ loggedinUser }}  - {{display}}
+                Welcome {{ loggedinUser }}
             </a>
 
             <div class="dropdown-menu" *dropdownMenu>
