--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -24,13 +24,13 @@
         </div>
         <div>
             <h5 *ngIf="property.sellRent == 1">
-              {{property.bhk}} bedroom {{property.propertyType}} @  AED{{property.price}}
+              {{property.bhk}} bedroom {{property.propertyType}} &#64;  AED{{property.price}}
             </h5>
             <h6 *ngIf="property.sellRent == 1" style="padding-left: 50px; color: red;">
               3-6 year Plans Available
             </h6>
             <h5 *ngIf="property.sellRent == 2">
-              {{property.bhk}} bedroom {{property.propertyType}} @  AED{{property.price}}
+              {{property.bhk}} bedroom {{property.propertyType}} &#64;  AED{{property.price}}
             </h5>
             <h6 *ngIf="property.sellRent == 2" style="padding-left: 50px; color: red;">
               4 cheques payments
