service for idle

--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -295,6 +295,7 @@
           <br>
 
           <div class="card-footer">
+            <img *ngIf="mainPhotoUrl" src={{mainPhotoUrl}} title="{{property.projectName}} - {{property.villaNumber}}" style="width: 50%; margin-left: 160px;"><br><br>
             <div class="btn-group d-flex">
               <button class="btn btn-danger" (click)="delProperty(property.id)">Delete Property {{property.id}}</button>
             </div>
