--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,6 +1,14 @@
+<!-- eslint-disable @angular-eslint/template/interactive-supports-focus -->
 <!-- eslint-disable @angular-eslint/template/eqeqeq -->
 <app-nav-bar></app-nav-bar>
-<div class="container" style="margin-top: 70px;">
-    <h3>Session Time: {{display}}</h3>
+<div class="container" style="margin-top: 70px;"
+
+    (mousemove) = "onUserAction()"
+    (click) = "onUserAction()"
+    (keypress) = "onUserAction()"
+
+    >
+
+    <!-- <h3>Session Time: {{display}}</h3> -->
     <router-outlet></router-outlet>
 </div>
