updates for idle and sessions

--- a/Frontend/src/app/nav-bar/nav-bar.component.html
+++ b/Frontend/src/app/nav-bar/nav-bar.component.html
@@ -36,7 +36,7 @@
             <a class="nav-link"
             routerLink="user/register"
             routerLinkActive="active"
-            >Register(Admin)</a>
+            >Register</a>
           </li>
 
           <li *ngIf="!loggedin()" class="nav-item">
