done with system

--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -4,7 +4,7 @@
 <!-- eslint-disable @angular-eslint/template/elements-content -->
 <!-- eslint-disable @angular-eslint/template/alt-text -->
 
-    <h3 *ngIf="token !== null">Family Documents</h3>
+    <h3>Family Documents</h3>
     <hr>
 
     <div *ngIf="token !== null" class="row">
