--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -2,10 +2,15 @@
 <!-- (mousemove) = "onUserAction()"-->
 <!-- eslint-disable @angular-eslint/template/eqeqeq -->
 <app-nav-bar></app-nav-bar>
+
 <div class="container" style="margin-top: 70px;"
     (click) = "onUserAction()"
     (keypress) = "onUserAction()">
 
+    <br>
+    <h3 *ngIf="token != null" style="color: blue;">Session timeout after:
+    <countdown [config]="config" (event)="handleEvent($event)"></countdown>
+    </h3>
     <!-- <h3>Session Time: {{display}}</h3> -->
     <router-outlet></router-outlet>
 </div>
