--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -4,7 +4,8 @@
 <!-- eslint-disable @angular-eslint/template/elements-content -->
 <!-- eslint-disable @angular-eslint/template/alt-text -->
 
-    <h3>Family Documents</h3>
+    <h3 *ngIf="token !== null">Family Documents</h3>
+    <h3 *ngIf="token === null">Family Documents (Un-Authorized)</h3>
     <hr>
 
     <div *ngIf="token !== null" class="row">
@@ -23,7 +24,7 @@
         
     </div>
     
-    <div class="row">
+    <div *ngIf="token !== null" class="row">
 
         <table class="center" style="width: 50%;">
 
@@ -47,7 +48,7 @@
 
     <br>
 
-    <div class="row">
+    <div *ngIf="token !== null" class="row">
         <br>
 
         <table class="center" style="width: 50%;">
