--- a/Frontend/src/app/property/property-card/property-card.component.html
+++ b/Frontend/src/app/property/property-card/property-card.component.html
@@ -6,7 +6,7 @@
                 <ul *ngIf="!hideIcons" class="list-inline text-center member-icons animate">
                     <li class="list-inline-item">
                         <button class="btn btn-primary" routerLink="/property-detail/{{property.id}}"><i style="font-size:24px" class="far fa-edit" title="View Property"></i></button>
-                        &nbsp; <button class="btn btn-primary" routerLink="callback"><i class="fa fa-phone" style="font-size:24px" title="Call Me Back Service"></i></button>
+                        &nbsp; <button class="btn btn-primary" routerLink="callback/{{property.id}}"><i class="fa fa-phone" style="font-size:24px" title="Call Me Back Service"></i></button>
                     </li>
                    
                 </ul>
