--- a/Frontend/src/app/callback/callback.component.html
+++ b/Frontend/src/app/callback/callback.component.html
@@ -59,6 +59,12 @@
                   <label for="phone">Phone Number</label>
                   <input type="text" name="phone" id="phone" [(ngModel)]="phone">
                 </div>
+
+                <div class="field padding-bottom--24">
+                  <label for="propname">Property Name / Type / Location</label>
+                  <input type="text" name="propname" id="propname" disabled value="{{property.name}} / {{propType}} / {{property.city}}">
+                </div>
+
                 <div class="field padding-bottom--24">
                   <input (click)="callme()" type="submit" name="submit" value="Continue">
                 </div>
