--- a/Frontend/src/app/callback/callback.component.html
+++ b/Frontend/src/app/callback/callback.component.html
@@ -47,12 +47,17 @@
         <div class="formbg-outer">
           <div class="formbg">
             <div class="formbg-inner padding-horizontal--48">
-              <span class="padding-bottom--15">Your Details</span>
+              <span class="padding-bottom--15">Fill out your Details</span>
               <form id="stripe-login">
 
                 <div class="field padding-bottom--24">
                   <label for="fname">Name</label>
                   <input type="text" name="fname" id="fname" [(ngModel)]="fname">
+                </div>
+
+                <div class="field padding-bottom--24">
+                  <label for="email">Email</label>
+                  <input type="email" name="email" id="email" [(ngModel)]="email">
                 </div>
 
                 <div class="field padding-bottom--24">
