--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -24,9 +24,9 @@
         
     </div>
     
-    <div *ngFor="let item of foldersName" class="row">
+    <div class="row">
 
-        <table *ngIf="item != null" class="center" style="width: 50%;">
+        <table class="center" style="width: 50%;">
 
             <tr>
               <th>Folder Name</th>
@@ -48,18 +48,18 @@
 
     <br>
 
-    <div *ngFor="let photo of allPhotos" class="row">
+    <div class="row">
         <br>
 
-        <table *ngIf="photo != null" class="center" style="width: 50%;">
+        <table class="center" style="width: 50%;">
 
             <tr>
               <th>Image</th>
               <th>Actionss</th>
             </tr>
             <br>
-            <tr >
-                <td style="padding-bottom: 1em;"><img _ngcontent-ng-c346306970=""
+            <tr *ngFor="let photo of allPhotos">
+                <td *ngIf="photo != null" style="padding-bottom: 1em;"><img _ngcontent-ng-c346306970=""
                     src="https://res.cloudinary.com/hspa2024/image/upload/c_thumb,h_500,w_800/{{photo.publicId}}.png"
                     alt="{{photo.publicId}}" style="width: 25%;"
                     class="img-thumbnail" title="{{photo.publicId}}" class="img-thumbnail">
