--- a/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
+++ b/Frontend/src/app/FamilyDocuments/familydocs/familydocs.component.html
@@ -77,7 +77,7 @@
                     </a>
 
                         <button class="btn btn-sm btn-primary" title="Move"
-                        (click)="moveImage(photo.publicId)"
+                        (click)="moveImage(photo.imageId)"
                         ><i class="fa-solid fa-file-image-o"></i></button> 
                 </td>
             </tr>
