--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -4,6 +4,7 @@
 <!-- eslint-disable @angular-eslint/template/eqeqeq -->
 <app-nav-bar></app-nav-bar>
 
+<mat-icon class="mat-icon" (click)="showMenu()">add_circle</mat-icon>
 
 <div class="container" style="margin-top: 70px;"
 
