--- a/Frontend/src/app/app.component.css
+++ b/Frontend/src/app/app.component.css
@@ -15,7 +15,15 @@
     font-size: 45px;
     padding-right: 100px;
     padding-bottom: 50px;
+    color: blue;
+  }
+
+  .mat-icon2 {
+    position: fixed;
+    bottom: 0; 
+    right: 0;
+    font-size: 45px;
+    padding-right: 55px;
+    padding-bottom: 50px;
     color: red;
-    
-    
   }
