--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -4,7 +4,8 @@
 <!-- eslint-disable @angular-eslint/template/eqeqeq -->
 <app-nav-bar></app-nav-bar>
 
-<mat-icon class="mat-icon" (click)="showMenu()">add_circle</mat-icon>
+<mat-icon id="sub" title="Subscribe" class="mat-icon" (click)="subscribe()">add_circle</mat-icon>
+<mat-icon id="unsub" title="Un-Subscribe" class="mat-icon2"  (click)="unsubscribe()">delete</mat-icon>
 
 <div class="container" style="margin-top: 70px;"
 
