--- a/Frontend/src/app/callback/callback.component.html
+++ b/Frontend/src/app/callback/callback.component.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="field padding-bottom--24">
-                  <input (click)="callme()" type="submit" name="submit" value="Continue">
+                  <input (click)="callme(email)" type="submit" name="submit" value="Continue">
                 </div>
               </form>
             </div>
