--- a/Frontend/src/app/property/property-detail/property-detail.component.html
+++ b/Frontend/src/app/property/property-detail/property-detail.component.html
@@ -174,7 +174,7 @@
                         &nbsp; &nbsp; -->
                         
                         <br>
-                        <strong>Places to visit around:</strong><br>
+                        <!-- <strong>Places to visit around:</strong><br> -->
 
                         <!--  <i class="fa-solid fa-store" aria-hidden="true" 
                                 style="font-size: 30px; padding-top: 15px;">
